# bigym

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: build.yaml  pr-changelog-reminder.yaml  pr-check-commit-messages.yaml  pr-check-label.yaml  pr-pre-commit-and-test.yaml  release.yaml
bigym/: __init__.py  action_modes.py  bigym_env.py  bigym_renderer.py
bigym/envs/xmls/: 3D_MODELS_ATTRIBUTION.md
bigym/robots/: floating_base.py  gripper.py
changelogs/: pending-changelog.md
demonstrations/: demo_store.py
doc/scripts/: download_and_validate_demos.py
doc/scripts/demos_determinism/: notes_thinkpad.md  validate_demos_determenism.py
examples/: replay_demo.py
tests/: test_action_modes.py  test_envs.py  test_observations.py
tests/tasks/: test_move_plate.py  test_stack_blocks.py  test_tasks.py
